[package]
name = "fuzzy_broccoli"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = "0.2.1"
bevy = { version = "0.15.3",default-features=false,  features = [
  # "android-game-activity",
  # "android-game-activity",
  # "android_shared_stdcxx",
  "animation",
  "bevy_asset",
  # "bevy_audio",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "vorbis",
  "webgl2",
  "x11",
  "dynamic_linking",
] }
bevy_kira_audio = "0.22.0"
bevy_svg = "0.15.1"
noise = "0.9.0"
rand = "0.8.5"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.release.package."*"]
opt-level = 3